# drawit

./: CMakeLists.txt  Dockerfile  Makefile  README.md  mask.pgm
assets/: mask1.pgm  mask2.pgm  mask3.pgm  mask4.pgm  mask5.pgm
include/: config.hpp  drawit.hpp  grid.hpp  mask.hpp  sand.hpp
src/: drawit.cpp  game.cpp  main.cpp  sand.cpp
src/include/: config.hpp  game.hpp  grid.hpp  texture.hpp
src/kiss/include/: kiss.hpp
